# QingLiaoChatServer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  JsonMsgProcess.cpp  JsonMsgProcess.h  LICENSE  QingLiaoChatServer.sln  QingLiaoChatServer.vcxproj  QingLiaoChatServer.vcxproj.filters  README.md  README_EN.md  SQLProcess.h  SQLProcess.hpp  UserManager.cpp  UserManager.h  build.bat  build.sh  definition.hpp  friendRoomVerification.cpp  friendRoomVerification.h  groupRoom.cpp  groupRoom.h  groupRoomVerification.cpp  groupRoomVerification.h  init.cpp  init.h  main.cpp  manager.cpp  manager.h  network.cpp  network.h  network.hpp  privateRoom.h  room.cpp  room.h  socketFunctions.cpp  socketFunctions.h  test.py  user.cpp  (+3 more)
.github/workflows/: cmake-multi-platform.yml
config/: config.ini
doc/: Format for Data Package.md  FormatForDataPackage.md  Website.md
doc/cn/: FormatForDataPackage_CN.md  README_CN.md
include/: Ini.cpp  Ini.h  Ini.hpp  Json.cpp  Json.h  Logger.hpp  SQLProcess.hpp  definition.hpp  groupid.hpp  httplib.h  networkEndianness.hpp  networkEndinass.hpp  option.hpp  regexMatch.hpp  returnStateMessage.hpp  structureHasher.hpp  timer.hpp  userStructure.hpp  userid.hpp
include/QuqiCrypto/: aes.hpp  base64.hpp  pkey.hpp
include/mariadb/conncpp/: Driver.hpp
lib/: capi.lib  dasync.lib  legacy.lib  libapps.lib  libcommon.lib  liblegacy.lib  libtestutil.lib  loader_attic.lib  ossltest.lib  p_test.lib  padlock.lib
server/: CMakeLists.txt
server/initialization/: init.cpp  init.h
server/input/: input.cpp  input.h  inputCommands.cpp
server/jsonMessageProcess/: JsonMsgProcess.cpp  JsonMsgProcess.h  JsonMsgProcessCommand.cpp  JsonMsgProcessCommand.h
server/main/: definition.hpp  main.cpp
server/manager/: dataManager.cpp  dataManager.h  manager.cpp  manager.h  verificationManager.cpp  verificationManager.h
server/network/: connection.hpp  network.cpp  network.h  package.h  rateLimiter.hpp
server/parser/: Json.h
server/room/: room.cpp  room.h
server/room/groupRoom/: groupPermission.cpp  groupPermission.h  groupRoom.cpp  groupRoom.h  groupRoomVerification.cpp  groupRoomVerification.h  groupUserLevel.hpp
server/room/privateRoom/: friendRoomVerification.h  privateRoom.cpp  privateRoom.h
server/socketFunctions/: socketFunctions.cpp  socketFunctions.h
server/user/: user.cpp  user.h
src/error/: qls_error.cpp  qls_error.h
src/initialization/: init.cpp  init.h
src/input/: input.cpp  input.h  inputCommands.cpp  inputCommands.h
src/jsonMessageProcess/: JsonMsgProcess.cpp  JsonMsgProcess.h
src/main/: main.cpp
src/manager/: dataManager.cpp  dataManager.h  manager.cpp  manager.h  structHasher.h  verificationManager.cpp  verificationManager.h
src/network/: dataPackage.cpp  dataPackage.h  network.cpp  network.h  package.cpp  package.h  socket.cpp  socket.h
src/parser/: Ini.cpp  Ini.h  Json.cpp  Json.h
src/room/: room.cpp  room.h
src/room/groupRoom/: groupPermission.cpp  groupPermission.h  groupRoom.cpp  groupRoom.h  groupRoomVerification.cpp  groupRoomVerification.h
src/room/privateRoom/: friendRoomVerification.cpp  friendRoomVerification.h  privateRoom.cpp  privateRoom.h
src/socketFunctions/: socketFunctions.cpp  socketFunctions.h
src/user/: user.cpp  user.h  user.tpp  userStructure.h
src/utils/: groupid.hpp  logger.hpp  option.hpp  timer.hpp  userid.hpp
testclient/: CMakeLists.txt  commands.cpp  commands.h  definition.hpp  main.cpp  network.cpp  network.h  session.cpp  session.h
utils/: CMakeLists.txt  SQLProcess.hpp  groupid.hpp  logger.hpp  networkEndianness.hpp  option.hpp  regexMatch.hpp  returnStateMessage.hpp  spinlock_mutex.hpp  userid.hpp
utils/crypto/: md_proxy.hpp  ossl_proxy.hpp
utils/error/: qls_error.cpp  qls_error.h
utils/network/: dataPackage.cpp  dataPackage.h  package.cpp  package.h  socket.cpp  socket.h
utils/parser/: Ini.cpp  Ini.h  Json.cpp  Json.h
